update auf 0.9.7